Fixed alignment of champion tiles
Adjusted height to max-content

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
   }
   
   .champion-tile {
+	height: max-content;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
